fixed the cursor leaving behind the prints

--- a/client/style.css
+++ b/client/style.css
@@ -11,6 +11,11 @@ html, body {
 }
 
 canvas {
-  display: block;
-  background: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#cursorCanvas {
+  pointer-events: none;
 }
